--- a/myapp/templates/page/upload.html
+++ b/myapp/templates/page/upload.html
@@ -25,7 +25,7 @@
             itemWidth: "140px",                 // 文件项的宽度
             itemHeight: "115px",                 // 文件项的高度
             url: "/myapp/api/upload",  // 上传文件的路径
-            fileType: ["jpg", "png","xlsx","xls"],// 上传文件的类型
+            fileType: ["xlsx","xls","csv"],// 上传文件的类型
             fileSize: 51200000,                // 上传文件的大小
             multiple: true,                    // 是否可以多个文件上传
             dragDrop: true,                    // 是否可以拖动上传文件
